crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__collections__acceptance_test_28_unique_list.snap
---
source: crates/nash-codegen/src/build/tests/source/collections.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Literal exposing (..)\nimport Eq exposing (..)\nfilter xs f =\n    case xs of\n        [] -> []\n        x :: rest ->\n            if f x then mkCons x (filter rest f)\n            else filter rest f\nunique xs =\n    case xs of\n        [] -> []\n        x :: rest -> mkCons x (unique (filter rest (\\y -> neq y x)))\nmain = eq (unique [1, 2, 3, 1]) [1, 2, 3]\n"
---
--- unoptimized Core
let fromBool#7 : bool -> bool = \value#32 : bool -> value#32 in
let eq#15 : int -> int -> bool = equalsInteger in
letrec
  eq#2 : list 'erased -> list 'erased -> bool [static []] = \xs#5 : list 'erased ys#6 : list 'erased -> let match#19 : list 'erased = xs#5 in
  case@List match#19 of
    Nil -> let match#8 : list 'erased = ys#6 in
    case@List match#8 of
      Nil -> fromBool#7 true
      Cons field#9 field#10 -> fromBool#7 false
    Cons field#20 field#21 -> let x#11 : 'erased = field#20 in
    let restX#12 : list 'erased = field#21 in
    let match#16 : list 'erased = ys#6 in
    case@List match#16 of
      Nil -> fromBool#7 false
      Cons field#17 field#18 -> let y#13 : 'erased = field#17 in
      let restY#14 : list 'erased = field#18 in
      case@Bool eq#15 x#11 y#13 of
        True -> eq#2 restX#12 restY#14
        False -> false
in
letrec
  filter#25 : list int -> (int -> bool) -> list int [static [1]] = \xs#33 : list int (f#34 : int -> bool) -> let match#37 : list int = xs#33 in
  case@List match#37 of
    Nil -> (con (list integer) [])
    Cons field#38 field#39 -> let x#35 : int = field#38 in
    let rest#36 : list int = field#39 in
    case@Bool f#34 x#35 of
      True -> mkCons x#35 (filter#25 rest#36 f#34)
      False -> filter#25 rest#36 f#34
in
let not#42 : 'erased -> bool = \value#43 : 'erased -> case@Bool (\identity#44 : bool -> identity#44) value#43 of
  True -> false
  False -> true in
let neq#27 : 'erased -> 'erased -> bool = \a#40 : 'erased b#41 : 'erased -> not#42 (eq#15 a#40 b#41) in
letrec
  unique#3 : list int -> list int [static []] = \xs#22 : list int -> let match#28 : list int = xs#22 in
  case@List match#28 of
    Nil -> (con (list integer) [])
    Cons field#29 field#30 -> let x#23 : int = field#29 in
    let rest#24 : list int = field#30 in
    mkCons x#23 (unique#3 (filter#25 rest#24 (\y#26 : int -> neq#27 y#26 x#23)))
in
let fromInt#4 : int -> int = \value#31 : int -> value#31 in
let main#1 : bool = eq#2 (unique#3 (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 1) (con (list integer) [])))))) (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (con (list integer) [])))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_7
    [(lam eq_15
      [(lam eq_2
        [(lam filter_25
          [(lam not_42
            [(lam neq_27
              [(lam unique_3
                [(lam fromInt_4
                  [(lam main_1 main_1)
                    [[eq_2
                      [unique_3
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                            [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                              [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]] (con (list integer) [])]]]]]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]] (con (list integer) [])]]]]])
                  (lam value_31 value_31)])
                [(lam self_45 [self_45 self_45])
                  (lam self_45
                    (lam xs_22
                      [(lam match_28
                        (case
                          match_28
                          (lam field_29
                            (lam field_30
                              [(lam x_23
                                [(lam rest_24
                                  [[(force (builtin mkCons)) x_23]
                                    [[self_45 self_45] [[filter_25 rest_24] (lam y_26 [[neq_27 y_26] x_23])]]])
                                  field_30])
                                field_29]))
                          (con (list integer) [])))
                        xs_22]))]])
              (lam a_40 (lam b_41 [not_42 [[eq_15 a_40] b_41]]))])
            (lam value_43
              (case [(lam identity_44 identity_44) value_43] (con bool True) (con bool False)))])
          (lam xs_33
            (lam f_34
              [[(lam self_47 [self_47 self_47])
                (lam self_47
                  (lam xs_33
                    [(lam match_37
                      (case
                        match_37
                        (lam field_38
                          (lam field_39
                            [(lam x_35
                              [(lam rest_36
                                (case
                                  [f_34 x_35]
                                  [[self_47 self_47] rest_36]
                                  [[(force (builtin mkCons)) x_35] [[self_47 self_47] rest_36]]))
                                field_39])
                              field_38]))
                        (con (list integer) [])))
                      xs_33]))]
                xs_33]))])
        [(lam self_48 [self_48 self_48])
          (lam self_48
            (lam xs_5
              (lam ys_6
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam x_11
                          [(lam restX_12
                            [(lam match_16
                              (case
                                match_16
                                (lam field_17
                                  (lam field_18
                                    [(lam y_13
                                      [(lam restY_14
                                        (case
                                          [[eq_15 x_11] y_13]
                                          (con bool False)
                                          [[[self_48 self_48] restX_12] restY_14]))
                                        field_18])
                                      field_17]))
                                [fromBool_7 (con bool False)]))
                              ys_6])
                            field_21])
                          field_20]))
                    [(lam match_8
                      (case
                        match_8
                        (lam field_9 (lam field_10 [fromBool_7 (con bool False)]))
                        [fromBool_7 (con bool True)]))
                      ys_6]))
                  xs_5])))]])
      (builtin equalsInteger)])
    (lam value_32 value_32)])
--- optimized Core
let eq#47 : int -> int -> bool = equalsInteger in
letrec
  eq#48 : list 'erased -> list 'erased -> bool [static []] = \xs#49 : list 'erased ys#50 : list 'erased -> case@List xs#49 of
    Nil -> case@List ys#50 of
      Nil -> true
      Cons field#53 field#54 -> false
    Cons field#55 field#56 -> case@List ys#50 of
      Nil -> false
      Cons field#60 field#61 -> let anf#91 : bool = eq#47 field#55 field#60 in
      case@Bool anf#91 of
        True -> eq#48 field#56 field#61
        False -> false
in
letrec
  unique#78 : list int -> list int [static []] = \xs#79 : list int -> case@List xs#79 of
    Nil -> (con (list integer) [])
    Cons field#81 field#82 -> letrec
      worker#90 : list int -> list int [static []] = \xs#89 : list int -> case@List xs#89 of
        Nil -> (con (list integer) [])
        Cons field#68 field#69 -> let anf#95 : bool = eq#47 field#68 field#81 in
        let anf#92 : bool = case@Bool anf#95 of
          True -> false
          False -> true in
        case@Bool anf#92 of
          True -> let anf#93 : list int = worker#90 field#69 in
          mkCons field#68 anf#93
          False -> worker#90 field#69
    in
    let anf#96 : list int = worker#90 field#82 in
    let anf#97 : list int = unique#78 anf#96 in
    mkCons field#81 anf#97
in
let anf#106 : list int = unique#78 (con (list integer) [1, 2, 3, 1]) in
let anf#107 : list int -> bool = eq#48 anf#106 in
anf#107 (con (list integer) [1, 2, 3])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_40
    [(lam eq_8
      [(lam eq_20
        [(lam unique_37
          [(lam anf_38
            [(lam anf_39 [anf_39 (con (list integer) [1, 2, 3])]) [eq_20 anf_38]])
            [unique_37 (con (list integer) [1, 2, 3, 1])]])
          [(lam self_21 [self_21 self_21])
            (lam self_22
              (lam xs_23
                (case
                  xs_23
                  (lam field_24
                    (lam field_25
                      [(lam worker_34
                        [(lam anf_35
                          [(lam anf_36 [[builtin_40 field_24] anf_36]) [[self_22 self_22] anf_35]])
                          [worker_34 field_25]])
                        [(lam self_26 [self_26 self_26])
                          (lam self_27
                            (lam xs_28
                              (case
                                xs_28
                                (lam field_29
                                  (lam field_30
                                    [(lam anf_31
                                      [(lam anf_32
                                        (case
                                          anf_32
                                          [[self_27 self_27] field_30]
                                          [(lam anf_33 [[builtin_40 field_29] anf_33]) [[self_27 self_27] field_30]]))
                                        (case anf_31 (con bool True) (con bool False))])
                                      [[eq_8 field_29] field_24]]))
                                (con (list integer) []))))]]))
                  (con (list integer) []))))]])
        [(lam self_9 [self_9 self_9])
          (lam self_10
            (lam xs_11
              (lam ys_12
                (case
                  xs_11
                  (lam field_15
                    (lam field_16
                      (case
                        ys_12
                        (lam field_17
                          (lam field_18
                            [(lam anf_19
                              (case anf_19 (con bool False) [[[self_10 self_10] field_16] field_18]))
                              [[eq_8 field_15] field_17]]))
                        (con bool False))))
                  (case ys_12 (lam field_13 (lam field_14 (con bool False))) (con bool True))))))]])
      (builtin equalsInteger)])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 10283137, memory: 56623
